Fix "jumpy" on checkboxes

--- a/src/resources/sass/components/_profile.scss
+++ b/src/resources/sass/components/_profile.scss
@@ -100,10 +100,11 @@
 	}
 
 	.checkbox {
-		margin: 0 15px 0 0;
 		display: block;
-
+		overflow: hidden;
+		margin: 0;
 		@include min-screen($screen-sm-min) {
+			overflow: initial;
 			display: inline-block;
 		}
 
@@ -193,8 +194,28 @@
 	}
 
 	.profile__input .checkbox {
-		label { display: inline-block; }
-		input { display: inline-block; }
+		padding: 10px 0;
+		margin: 0;
+
+		& + .checkbox {
+			padding-bottom: 0;
+		}
+
+		@include min-screen($screen-sm-min) {
+			padding: 0;
+			margin: 0 15px 0 0;
+		}
+
+		label {
+			display: inline-block;
+			vertical-align: sub;
+		}
+
+		input {
+			display: block;
+			float: left;
+			margin-right: 10px;
+		}
 	}
 
 	.profile__input label {
